package foo;

message AnotherMessage {
  required int32 id = 1;
  option foo = "bar";
}

message AMessage {
  option message_set_wire_format = true;

  required AnotherMessage anotherMessage = 1 [anOption = "something"];
}

enum Baz {
  option random.enum.option = 1.0;
  
  A = 1 [some_int = 1, some_bool = true, some_string = "foo", default = "none"];
  Z = 26;
  
}
